[package]
name = "hexo-rs"
version = "0.1.1"
edition = "2021"
authors = ["Yukang Chen"]
description = "A fast static site generator compatible with Hexo themes"
license = "MIT"
repository = "https://github.com/chenyukang/hexo-rs"
keywords = ["hexo", "static-site", "blog", "markdown", "ssg"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"

# Markdown
pulldown-cmark = { version = "0.12", features = ["simd"] }

# Code highlighting
syntect = "5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"

# HTTP Server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }
tokio-stream = "0.1"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# File system
walkdir = "2"
glob = "0.3"

# Regex
regex = "1"
lazy_static = "1"
indexmap = { version = "2", features = ["serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
slug = "0.1"
percent-encoding = "2"

# JavaScript engine for EJS templates (QuickJS - fast and lightweight)
quick-js = "0.4"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "hexo-rs"
path = "src/main.rs"
