[package]
name = "hexo-rs"
version = "0.3.0"
edition = "2021"
authors = ["Yukang Chen"]
description = "A fast static site generator with built-in vexo theme"
license = "MIT"
repository = "https://github.com/chenyukang/hexo-rs"
keywords = ["hexo", "static-site", "blog", "markdown", "ssg"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1", features = ["preserve_order"] }

# Markdown
pulldown-cmark = { version = "0.12", features = ["simd"] }

# Code highlighting
syntect = "5"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Server
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# File system
walkdir = "2"

indexmap = { version = "2", features = ["serde"] }

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
slug = "0.1"

# Template engine
tera = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "hexo-rs"
path = "src/main.rs"
